# massif2img

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
.github/workflows/: build.yml  docker.yml  docs.yml
docker/: Dockerfile.debian  Dockerfile.nix
docs/: default.nix  mkdocs.yml
docs/docs/: building.md  index.md  installing.md  nix.md  style.md
nix/: default.nix  massif2img.nix
scripts/: check-format.sh  format-nix.sh
src/: Ax.cpp  Ax.hpp  Block.hpp  BlockAnalyzer.cpp  BlockAnalyzer.hpp  CMakeLists.txt  CSV.cpp  CSV.hpp  Extension.cpp  Extension.hpp  LineMatcher.cpp  LineMatcher.hpp  Logger.cpp  Logger.hpp  MassifFile.cpp  MassifFile.hpp  PythonCodegen.cpp  PythonCodegen.hpp  Snapshot.hpp  main.cpp
tests/: CMakeLists.txt  massif.1.out  test.cpp
